# localstack-authz

./: .dockerignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: server.py
example/: docker-compose.yml
proxy/: Dockerfile  nginx.conf
src/: main.py
