[project]
name = "localstack-authz"
version = "0.1.0"
description = "Additional layer to forbid access to LocalStack resources with unauthorized access keys"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
]
